--- a/templates/donate.html
+++ b/templates/donate.html
@@ -28,8 +28,10 @@
         <option value="Women's Products"> Women's Products </option>
       </select>
     </h2>
-
-    <input type="image" src="../static/results.png" class="button">
+  
+    <div style="text-align:center;">
+     <input type="image" src="../static/results.png" class="button"> 
+    </div>
   
     </form>
 
