--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
     <div class="main">
         <img src="{{ url_for('static', filename="logo.png") }}" class="logo"> </img>
     <p class="text">
-      <i> Give </i> is a digital matching platform that connects organizations
-      such, as homeless shelters, with individuals willing to donate materials.
+      <i> Give </i> is a digital matching platform that connects organizations,
+      such as homeless shelters, with individuals intending to donate resources.
     </p>
     <div class="button_section" align="center">
         <a href="donate">
