--- a/templates/request.html
+++ b/templates/request.html
@@ -30,7 +30,11 @@
         <option value="Women's Products"> Women's Products </option>
       </select>
     </h2>
-    <input type="image" src="../static/submit.png" class="button" id="page_button">
+    
+    <div style="text-align: center;">
+      <input type="image" src="../static/submit.png" class="button" id="page_button">
+    </div>
+    
     </form>
 
   <!---
