--- a/static/stylesheets/index_style.css
+++ b/static/stylesheets/index_style.css
@@ -2,6 +2,7 @@ html body {
   margin: 0;
   padding: 0;
   background-color: #A6D16C;
+
 }
 
 .main {
@@ -51,10 +52,13 @@ h2 {
 }
 
 .button{
-  padding: 0;
+  /*padding: 0;
   margin: 0 auto;
   border-radius: 100px;
+  width: 250px;*/
+  border-radius: 20px;
   width: 250px;
+  margin: 75px;
 }
 
 input[type="image"] {
