--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 
   <head>
     <link href="{{ url_for('static', filename='stylesheets/index_style.css') }}" type="text/css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='stylesheets/page_style.css') }}" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500" rel="stylesheet">
     <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}">
   </head>
