--- a/static/stylesheets/page_style.css
+++ b/static/stylesheets/page_style.css
@@ -12,16 +12,18 @@
   padding-bottom: 3px;
 }
 
+.page_logo:hover{
+  opacity: 0.5;
+}
+
 .prompt{
   text-align: center;
   margin: 0px auto;
   max-width: 700px;
   height: 100%;
   width: 98vw;
-
   padding: 30px;
   font-family: "Montserrat", sans-serif;
-
   font-size: 30px;
   font-weight: 400;
   line-height: 35px;
@@ -80,4 +82,26 @@ button {
 
 .container{
   text-align: center;
+}
+
+.input-text{
+
+font-family: "Montserrat", sans-serif;
+font-size: 25px;
+font-weight: 400;
+margin-left: 30px;
+line-height: 30px;
+
+width: 400px;
+
+}
+
+.drop-down{
+  -webkit-appearance: menulist-button;
+
+  font-family: "Montserrat", sans-serif;
+  font-size: 25px;
+  font-weight: 400;
+  margin-left: 30px;
+  width: 400px;
 }
