--- a/templates/request.html
+++ b/templates/request.html
@@ -16,12 +16,12 @@
     </a>
 
     <img src="{{ url_for('static', filename="request_2.png")}}" class="title_img"/>
-    
+
     <form action="{{ url_for("my_request") }}" method="post">
-    <h2 class="prompt"> Organization: <input type="text" name="org"> </h2>
-    <h2 class="prompt"> Zipcode: <input type="text" name="zcode"> </h2>
-    <h2 class="prompt"> Email: <input type="text" name="email"> </h2>
-    <h2 class="prompt"> Category: <select name="category"> </h2>
+    <h2 class="prompt"> Organization: <input type="text" name="org" class="input-text"> </h2>
+    <h2 class="prompt"> Zipcode: &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp; <input type="text" name="zcode" class="input-text"> </h2>
+    <h2 class="prompt"> Email: &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <input type="text" name="email" class="input-text"> </h2>
+    <h2 class="prompt"> Category: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <select name="category" class="drop-down"> </h2>
         <option value="" disabled selected>Category</option>
         <option value="Bedding"> Bedding </option>
         <option value="Cleaning Supplies"> Cleaning Supplies </option>
@@ -30,11 +30,11 @@
         <option value="Women's Products"> Women's Products </option>
       </select>
     </h2>
-    
+
     <div style="text-align: center;">
       <input type="image" src="../static/submit.png" class="button" id="page_button">
     </div>
-    
+
     </form>
 
   <!---
